fixed media query

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		</header>
 		<main class="container-fluid">
 			<div class="row">
-				<div class="col-12 col-lg-6 item">
+				<div class="col-12 col-md-6 item">
 					<div class="content-1">
 						<h2 class="H2-text">Transform your brand</h2>
 						<p class="paragraph">
@@ -88,17 +88,17 @@
 						<a href="#" class="link-text yellow-underline">LEARN MORE</a>
 					</div>
 				</div>
-				<picture class="col-12 order-first col-lg-6 order-lg-last item">
-					<source media="(min-width:992px)" srcset="./images/desktop/image-transform.jpg" />
+				<picture class="col-12 order-first col-md-6 order-md-last item">
+					<source media="(min-width:576px)" srcset="./images/desktop/image-transform.jpg" />
 					<img src="./images/mobile/image-transform.jpg" />
 				</picture>
 			</div>
 			<div class="row">
-				<picture class="col-12 col-lg-6 item">
-					<source media="(min-width:992px)" srcset="./images/desktop/image-stand-out.jpg" />
+				<picture class="col-12 col-md-6 item">
+					<source media="(min-width:576px)" srcset="./images/desktop/image-stand-out.jpg" />
 					<img src="./images/mobile/image-stand-out.jpg" />
 				</picture>
-				<div class="col-12 col-lg-6 item">
+				<div class="col-12 col-md-6 item">
 					<div class="content-1">
 						<h2 class="H2-text">Stand out to the right audience</h2>
 						<p class="paragraph">
@@ -111,10 +111,10 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-12 col-lg-6 item graphic">
+				<div class="col-12 col-md-6 item graphic">
 					<picture>
 						<source
-							media="(min-width:992px)"
+							media="(min-width:950px)"
 							srcset="./images/desktop/image-graphic-design.jpg"
 						/>
 						<img src="./images/mobile/image-graphic-design.jpg" />
@@ -128,10 +128,10 @@
 						</p>
 					</div>
 				</div>
-				<div class="col-12 col-lg-6 item photography">
+				<div class="col-12 col-md-6 item photography">
 					<picture>
 						<source
-							media="(min-width:992px)"
+							media="(min-width:950px)"
 							srcset="./images//desktop/image-photography.jpg"
 						/>
 						<img src="./images/mobile/image-photography.jpg" />
@@ -151,7 +151,7 @@
 			<h6>CLIENT TESTIMONIALS</h6>
 			<div class="container-fluid">
 				<div class="row justify-content-center">
-					<div class="col-12 col-lg-3">
+					<div class="col-12 col-md-3">
 						<img src="./images/image-emily.jpg" />
 						<p>
 							We put our trust in Sunnyside and they delivered, making sure our needs were
@@ -162,7 +162,7 @@
 							<div class="paragraph">Marketing Director</div>
 						</footer>
 					</div>
-					<div class="col-12 col-lg-3">
+					<div class="col-12 col-md-3">
 						<img src="./images/image-thomas.jpg" />
 						<p>
 							Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success
@@ -173,7 +173,7 @@
 							<div class="paragraph">Chief Operating Officer</div>
 						</footer>
 					</div>
-					<div class="col-12 col-lg-3">
+					<div class="col-12 col-md-3">
 						<img src="./images/image-jennie.jpg" />
 						<p>
 							Incredible end result! Our sales increased over 400% when we worked with
@@ -189,27 +189,27 @@
 		</section>
 		<section class="container-fluid images">
 			<div class="row">
-				<picture class="col-6 col-lg-3">
+				<picture class="col-6 col-md-3">
 					<source
-						media="(min-width:992px)"
+						media="(min-width:576px)"
 						srcset="./images/desktop/image-gallery-milkbottles.jpg"
 					/>
 					<img src="./images/mobile/image-gallery-milkbottles.jpg" />
 				</picture>
-				<picture class="col-6 col-lg-3">
+				<picture class="col-6 col-md-3">
 					<source
-						media="(min-width:992px)"
+						media="(min-width:576px)"
 						srcset="./images/desktop/image-gallery-orange.jpg"
 					/>
 					<img src="./images/mobile/image-gallery-orange.jpg" />
 				</picture>
-				<picture class="col-6 col-lg-3">
-					<source media="(min-width:992px)" srcset="./images/desktop/image-gallery-cone.jpg" />
+				<picture class="col-6 col-md-3">
+					<source media="(min-width:576px)" srcset="./images/desktop/image-gallery-cone.jpg" />
 					<img src="./images/mobile/image-gallery-cone.jpg" />
 				</picture>
-				<picture class="col-6 col-lg-3">
+				<picture class="col-6 col-md-3">
 					<source
-						media="(min-width:992px)"
+						media="(min-width:576px)"
 						srcset="./images/desktop/image-gallery-sugarcubes.jpg"
 					/>
 					<img src="./images/mobile/image-gallery-sugarcubes.jpg" />
