--- a/index.html
+++ b/index.html
@@ -263,12 +263,11 @@
 						/></svg
 				></a>
 			</div>
+			<div class="attribution">
+				Challenge by
+				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
+				>. Coded by <a href="https://github.com/JasonChan1129" target="_blank">Jason Chan</a>.
+			</div>
 		</footer>
-
-		<!-- <div class="attribution">
-			Challenge by
-			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-			Coded by <a href="#">Jason Chan</a>.
-		</div> -->
 	</body>
 </html>
